Bug 227582 - kmail ignores disabled auto-line-break-settings (in menu-checkbox and global config)
Summary: kmail ignores disabled auto-line-break-settings (in menu-checkbox and global ...
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: composer (other bugs)
Version First Reported In: 1.13.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-18 22:10 UTC by H.H.
Modified: 2011-09-20 14:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.H. 2010-02-18 22:10:14 UTC
Version:           1.13.0 (using 4.4.00 (KDE 4.4.0) "release 222", KDE:KDE4:Factory:Desktop / openSUSE_11.2)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.31.5-0.1-desktop

to reproduce:

1)
- start composing a new mail
- disable "linebreak" in option menu in that composition window
- paste a real long link with "-"-characters in it in mail-text
result: the link is line-wrapped

2)
same procedure and result with disabled linebreak after xx characters in global kmail composer-settings

this is really annoying especially for trying to send links to other people, which seems impossible at the moment.
Comment 1 Janet 2010-03-07 13:55:46 UTC
Related to Bug 209030?
Comment 2 Björn Ruberg 2010-03-13 15:47:38 UTC
Confirmed
Comment 3 Laurent Montel 2011-09-20 14:14:59 UTC
Git commit fd7608e569a873d1b91e9cd9d0708c165b58a3ba by Montel Laurent.
Committed on 20/09/2011 at 16:14.
Pushed by mlaurent into branch 'master'.

Fix Bug 227582 - kmail ignores disabled auto-line-break-settings (in menu-checkbox and global config)

FIXED-IN: 4.7.2
BUG: 227582

M  +1    -1    kmail/kmcomposewin.cpp

http://commits.kde.org/kdepim/fd7608e569a873d1b91e9cd9d0708c165b58a3ba
Comment 4 Laurent Montel 2011-09-20 14:16:10 UTC
Git commit 6ae8ce11f64a08fb72e01def74025777bc2676f6 by Montel Laurent.
Committed on 20/09/2011 at 16:14.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 227582 - kmail ignores disabled auto-line-break-settings (in menu-checkbox and global config)

FIXED-IN: 4.7.2
BUG: 227582
(cherry picked from commit fd7608e569a873d1b91e9cd9d0708c165b58a3ba)

M  +1    -1    kmail/kmcomposewin.cpp

http://commits.kde.org/kdepim/6ae8ce11f64a08fb72e01def74025777bc2676f6