Fix Bug 227582 - kmail ignores disabled auto-line-break-settings (in menu-checkbox and global config)

FIXED-IN: 4.7.2
BUG: 227582